# clima-scope

./: .gitignore  ALL_FIXES_SUMMARY.md  BACKEND_FIXES_SUMMARY.md  BUG_FIXES_SUMMARY.md  CLEANUP_SUMMARY.md  IMPORT_FIXES_SUMMARY.md  IMPORT_ISSUES_GUIDE.md  PATH_REFERENCE_FIXES.md  README.md  SESSION_COMPLETE_SUMMARY.md  SETUP_VENV_FIX.md  convert_svg_to_png.py  download_icons.py  kilifi_station_data.csv  package-lock.json  package.json  railway.json  tsconfig.json  vitest.config.ts
app/: globals.css  page.tsx
backend/: .gitignore  Dockerfile  MIGRATIONS.md  Makefile  PHASE_1_3_COMPLETE.md  README.md  STRUCTURE.md  create_initial_migration.sh  nixpacks.toml  railpack.toml  requirements-dev.txt  requirements.txt  run.py  setup_venv.sh  start.sh
backend/scripts/pdf_generator/: .gitignore  MANIFEST.in  Makefile  README.md  chart_generator.py  config.py  generate_sample.py  install_simple.sh  pyproject.toml  report_generator.py  requirements-anthropic.txt  requirements.txt  section_generators.py  setup.py  setup_venv.sh  test_api_key.py
backend/scripts/pdf_generator/sample_data/: nairobi_sample.json
components/: dashboard-header.tsx  data-upload.tsx  file-item.tsx  file-upload-section.tsx  select-input.tsx  types.ts
docs/: BACKEND_API_TODOS.md  CODEBASE_REVIEW.md  COMPREHENSIVE_REVIEW.md  DATA_INTERFACES_SPECIFICATION.md  JSON_SCHEMA_SPECIFICATION.md  MAP_EMBEDDING_IMPLEMENTATION_SUMMARY.md  MAP_EMBEDDING_STRATEGY.md  MAP_INTEGRATION.md  PERSON_B_TASK_1_SUMMARY.md  PERSON_B_TASK_2_SUMMARY.md  PERSON_B_TASK_3_SUMMARY.md  REPORT_STRUCTURE_SPECIFICATION.md  REVIEW_SUMMARY.md  TEST_RESULTS.md
frontend/: package-lock.json  package.json  tsconfig.json
lib/: api-client.ts  data-interfaces.ts  json-schema.ts  map-embedding.ts  report-structure.ts  weather-schemas.ts
pdf_generator/: API_KEY_SETUP.md  INSTALLATION.md  INSTALLATION_TROUBLESHOOTING.md  PACKAGE_STRUCTURE.md  QUICKSTART.md  README.md  __init__.py  ai_service.py  enhanced_pdf_builder.py  generate_ai_sample.py  models.py  pdf_builder.py  requirements-dev.txt  requirements-renderpm.txt  test_api_key.py  utils.py
schemas/: county-weather-report.schema.json
(+196 files in other folders)
