[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clima-scope-pdf-generator"
version = "0.2.0"
description = "AI-powered PDF report generator for Clima-scope weather reports"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Clima-scope Team"}
]
keywords = ["weather", "pdf", "report", "ai", "meteorology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "pydantic>=2.9.0",
    "python-dateutil>=2.9.0",
    "openai>=1.0.0",
]

# Note: renderPM is optional and may not build on Python 3.14+
# It's only needed for advanced image rendering features

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "clima-scope-pdf-generator[anthropic,dev]",
]

[project.scripts]
clima-pdf-generate = "pdf_generator.generate_sample:main"
clima-pdf-generate-ai = "pdf_generator.generate_ai_sample:main"

[tool.setuptools]
# When installing from pdf_generator/ directory, package is current directory
# This tells setuptools that pdf_generator package is located at "."
packages = ["pdf_generator"]
package-dir = {"pdf_generator" = "."}

[tool.setuptools.package-data]
pdf_generator = ["sample_data/*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
